--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="keywords" content="Entreprise webdesign Lyon, web design Lyon, SEO, visibilite internet, conseils webdesign, strategie acessibilite, la chouette agence, agence webdesign">
+    <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet (Audits, Conseils et Strategie)">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="img.2/favicon.jpg">
     
@@ -176,7 +176,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img.2/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img.2/3.jpg" class="img-responsive portfolio-thumb" title="Création d'un site internet pour un voyageur" alt="image de l'equipement hightech video et informatique étalé sur une table"/></a>
+				<a href="#" data-lightbox="img.2/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img.2/3.jpg" class="img-responsive portfolio-thumb " title="Création d'un site internet pour un voyageur" alt="image de l'equipement hightech video et informatique étalé sur une table"/></a>
 
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -219,28 +219,28 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
-						La chouette agence - Agence web basée à Lyon.<br>
-					</p>
+					<h3 class="text-center white">
+						La chouette agence - Agence web basée à Lyon.
+					</h3>
 					<div class="row row-no-gutters social">
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-twitter icon-md" title="Nous suivre sur Twitter"></i></a>
+								<a class="social" href="#"><i class="fa fa-twitter icon-md" title="Nous suivre sur Twitter"></i></a>
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-facebook icon-md" title="Nous suivre sur Facebook"></i></a>
+								<a class="social" href="#"><i class="fa fa-facebook icon-md" title="Nous suivre sur Facebook"></i></a>
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-dribbble icon-md" title="Nous suivre sur Dribbble"></i></a>
+								<a class="social" href="#"><i class="fa fa-dribbble icon-md" title="Nous suivre sur Dribbble"></i></a>
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-instagram icon-md" title="Nous suivre sur Instagram"></i></a>
+								<a class="social" href="#"><i class="fa fa-instagram icon-md" title="Nous suivre sur Instagram"></i></a>
 							</div>
 						</div>
 					</div>
