--- a/page2.html
+++ b/page2.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
  <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="keywords" content="Entreprise webdesign Lyon, web design Lyon, SEO, visibilite internet, conseils webdesign, strategie acessibilite, la chouette agence, agence webdesign">
+    <meta name="description" content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet (Audits, Conseils et Strategie)">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="img.2/favicon.jpg">
     
@@ -62,14 +62,18 @@
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
 						<img src="img.2/logo.png" class="center-block image-resize-mode" width="100" title="La chouette agence, agence web basée a Lyon" alt="Logo noir de La chouette Agence" /><br>
+
+						<h1 class="text-center hero-bloc-text tc-white ">
+							La chouette agence.
+						</h1><br>
 						
 						<h2 class="text-center hero-bloc-text tc-white">
-						Parlons web design !</h2>
+						Parlons web design !</h2><br>
 
-					    <p class="text-center mg-lg tc-white tight-width-whitespace">
+					    <h3 id="contact2" class="text-center mg-lg tc-white tight-width-whitespace">
 						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-					    </p>
+					    </h3>
 
 					</div>
 				</div>
@@ -79,21 +83,6 @@
     </header>
 
     <section>
-	<!-- <div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
-		<div class="container bloc-lg">
-			<div class="row">
-				<div class="col-sm-12">
-					<h1 class="text-center hero-bloc-text tc-white">
-						Parlons web design !
-					</h1>
-					<p class="text-center mg-lg tc-white tight-width-whitespace">
-						Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-						Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-					</p>
-				</div>
-			</div>
-		</div>
-	</div> -->
 
 	<div class="bloc bgc-white l-bloc" id="bloc-7">
 		<div class="container bloc-lg">
@@ -103,25 +92,25 @@
 					 <!-- novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"> -->
 
 						<div class="form-group">
-							<label>
+							<label title="Renseignez votre Nom">
 								Nom
 							</label>
 							<input id="name" class="form-control" required />
 						</div>
 						<div class="form-group">
-							<label>
+							<label title="Renseignez votre Adresse mail">
 								Adresse email
 							</label>
 							<input id="email" class="form-control" type="email" required />
 						</div>
 						<div class="form-group">
-							<label>
+							<label title="Indiquez nous comment vous nous avez connu">
 								Comment nous avez-vous connu ?
 							</label>
 							<input class="form-control" type="email" required id="input_504" />
 						</div>
 						<div class="form-group">
-							<label>
+							<label title="Decrivez nous votre Projet">
 								Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 							</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 						</div> 
@@ -131,7 +120,7 @@
 					</form>
 				</div>
 				<address>
-					<div class="col-sm-6 text-center">
+					<div class="col-sm-6 text-center" id="adresse">
 						<br>
 						<img src="img.2/la-chouette-agence.png" title="La chouette Agence" alt="Logo de la chouette agence" height="40" /><br>
 						<p>
@@ -152,34 +141,34 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">
-						La chouette agence - Agence web basée à Lyon.<br>
-					</p>
+					<h3 class="text-center white">
+						La chouette agence - Agence web basée à Lyon.
+					</h3>
 					<div class="row row-no-gutters social">
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-twitter icon-md" title="Nous suivre sur Twitter"></i></a>
+								<a class="social" href="#"><i class="fa fa-twitter icon-md" title="Nous suivre sur Twitter"></i></a>
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-facebook icon-md" title="Nous suivre sur Facebook"></i></a>
+								<a class="social" href="#"><i class="fa fa-facebook icon-md" title="Nous suivre sur Facebook"></i></a>
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-dribbble icon-md" title="Nous suivre sur Dribbble"></i></a>
+								<a class="social" href="#"><i class="fa fa-dribbble icon-md" title="Nous suivre sur Dribbble"></i></a>
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<div class="col-xs-3 col-sm-3">
 							<div class="text-center">
-								<a class="social" href="index.html"><i class="fa fa-instagram icon-md" title="Nous suivre sur Instagram"></i></a>
+								<a class="social" href="#"><i class="fa fa-instagram icon-md" title="Nous suivre sur Instagram"></i></a>
 							</div>
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-sm-4">
-							Partenaires
+						<div class="col-sm-4 info">
+							<p>Partenaires</p>
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
@@ -187,8 +176,8 @@
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
 						</div>
-						<div class="col-sm-4">
-							Annuaires liste 1
+						<div class="col-sm-4 info">
+							<p>Annuaires liste 1</p>
 							<ul>
 								<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 								<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -201,8 +190,8 @@
 								<li><a href="listeseo.com">listeseo.com</a></li>
 							</ul>
 						</div>
-						<div class="col-sm-4">
-							Annuaires liste 2
+						<div class="col-sm-4 info">
+							<p>Annuaires liste 2</p>
 							<ul>
 								<li><a href="betterseo.com">betterseo.com</a></li>
 								<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
